src/objects/Preference_Code__c.object
<CustomObject>
    <description>Reference table that allows integrated objects or packages to access the full Preferences object picklist dependency structure.</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Indicates the highest level differentiator of a Preference.</description>
        <label>Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Value__c</fullName>
        <description>Code Value which signifies the pick list values contained within the Category, Subcategory, Type and Subtype fields.</description>
        <externalId>true</externalId>
        <inlineHelpText>Code Value which signifies the pick list values contained within the Category, Subcategory, Type and Subtype fields.</inlineHelpText>
        <label>Code Value</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <description>Indicates the second highest level differentiator of a Preference.</description>
        <inlineHelpText>Indicates the second highest level differentiator of a Preference.</inlineHelpText>
        <label>Subcategory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>Indicates the fourth and lowest level differentiator of a Preference.</description>
        <inlineHelpText>Indicates the fourth and lowest level differentiator of a Preference.</inlineHelpText>
        <label>Subtype</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicates the third highest level differentiator of a Preference.</description>
        <inlineHelpText>Indicates the third highest level differentiator of a Preference.</inlineHelpText>
        <label>Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Preference Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preference Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>